add lamport timestamp

--- a/publishers/weather/Dockerfile
+++ b/publishers/weather/Dockerfile
@@ -1,13 +1,10 @@
-FROM python:3.12-slim
+FROM python:3.10-slim
 
 WORKDIR /app
 
-COPY . .
+COPY publishers/weather/weather_publisher.py .
+COPY utils ./utils
 
-RUN pip install flask requests
+RUN pip install requests
 
-# Expose default port (can override in docker-compose)
-EXPOSE 5000
-
-# Replace the .py file with the actual one per component using docker-compose `command`
 CMD ["python", "weather_publisher.py"]
