--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,7 +38,8 @@ services:
     
   air_quality_publisher:
     build:
-      context: ./publishers/air_quality
+      context: .
+      dockerfile: publishers/air_quality/Dockerfile
     container_name: air_quality_publisher
     depends_on:
       - broker
@@ -47,7 +48,8 @@ services:
 
   traffic_publisher:
     build:
-      context: ./publishers/traffic
+      context: .
+      dockerfile: publishers/traffic/Dockerfile
     container_name: traffic_publisher
     depends_on:
       - broker
@@ -56,7 +58,8 @@ services:
 
   weather_publisher:
     build:
-      context: ./publishers/weather
+      context: .
+      dockerfile: publishers/weather/Dockerfile
     container_name: weather_publisher
     depends_on:
       - broker
@@ -65,7 +68,8 @@ services:
 
   environmental_monitor:
     build:
-      context: ./subscribers/environmental_monitor
+      context: .
+      dockerfile: subscribers/environmental_monitor/Dockerfile
     container_name: environmental_monitor
     depends_on:
       - broker
@@ -76,7 +80,8 @@ services:
 
   traffic_manager:
     build:
-      context: ./subscribers/traffic_manager
+      context: .
+      dockerfile: subscribers/traffic_manager/Dockerfile
     container_name: traffic_manager
     depends_on:
       - broker
@@ -87,7 +92,8 @@ services:
 
   public_interface:
     build:
-      context: ./subscribers/public_interface
+      context: .
+      dockerfile: subscribers/public_interface/Dockerfile
     container_name: public_interface
     depends_on:
       - broker
