--- a/subscribers/environmental_monitor/Dockerfile
+++ b/subscribers/environmental_monitor/Dockerfile
@@ -2,7 +2,8 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-COPY . .
+COPY subscribers/environmental_monitor .
+COPY utils ./utils
 
 RUN pip install flask requests
 
