--- a/subscribers/public_interface/Dockerfile
+++ b/subscribers/public_interface/Dockerfile
@@ -2,7 +2,8 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-COPY . .
+COPY subscribers/public_interface .
+COPY utils ./utils
 
 RUN pip install flask requests
 
