--- a/subscribers/traffic_manager/Dockerfile
+++ b/subscribers/traffic_manager/Dockerfile
@@ -2,7 +2,8 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-COPY . .
+COPY subscribers/traffic_manager .
+COPY utils ./utils
 
 RUN pip install -r requirements.txt
 
